# warden

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: kat.yml  mobile-ci.yml  mobile-release.yml
cli/: Cargo.toml  README.md
cli/src/: args.rs  client.rs  condition.rs  decrypt.rs  encrypt.rs  keygen.rs  keys.rs  main.rs  store.rs  util.rs
cli/tests/: cli_flow.rs
core/: Cargo.toml  README.md
core/examples/: veil_fixture.rs
core/src/: condition.rs  dealer.rs  ecies.rs  envelope.rs  ibe.rs  lib.rs  shamir.rs
core/src/fed/: mod.rs  node.rs  public.rs
core/tests/: end_to_end.rs  envelope_e2e.rs  vectors.rs
dealer/: Cargo.toml
dealer/src/: main.rs
dealer/tests/: dealer_cli.rs
deploy/fly/: Dockerfile  README.md  deploy.sh  entrypoint.sh  fly.node.toml
docs/: 00-overview.md  01-architecture.md  02-condition-model.md  03-protocol.md  04-envelope-format.md  05-threat-model.md  06-operator-manual.md  07-roadmap.md  08-architecture-decision.md  GLOSSARY.md
docs/references/: crypto-scan-2026-06.md  drand-analysis.md
docs/whitepaper/: .gitignore  BUILD.md  whitepaper.md  whitepaper.tex
e2e/: README.md  veil-e2e.mjs
e2e/lib/: chain.mjs  warden.mjs
e2e/local/: Dockerfile.chain  Dockerfile.warden  README.md  chain-entrypoint.sh  docker-compose.yml  run.mjs
ffi/: Cargo.toml  README.md  build-mobile.sh
ffi/dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
ffi/dart/example/: README.md  warden_ffi_example.dart
ffi/dart/lib/: warden_ffi.dart
ffi/dart/test/: warden_ffi_test.dart
ffi/flutter/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
ffi/flutter/android/: build.gradle
ffi/flutter/ios/: warden_ffi_flutter.podspec
ffi/flutter/lib/: warden_ffi_flutter.dart
ffi/src/: lib.rs
ffi/tests/: ffi_roundtrip.rs
node/: Cargo.toml  README.md
node/src/: abi.rs  config.rs  convert.rs  eval.rs  handler.rs  main.rs  rpc.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/test/: fixture.json  round_trip.cjs
