[package]
name = "warden-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Warden client CLI (Phase 0 PoC): keygen, encrypt (double-wrap), decrypt (fetch partials → combine → open)"
publish = false

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
# Envelope (seal/open), federation file format, condition model, threshold combine — all
# non-gated, so the client never needs the trusted-dealer / master-secret path.
warden-core = { path = "../core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
sha2 = "0.10" # content-addressed local store (CID = sha256 of the envelope)
ark-serialize = "0.4" # deserialize a node's `Partial` from hex
rand = "0.8" # OsRng for keygen + sealing
# Blocking HTTP client to poll federation nodes for partials.
ureq = { version = "2", features = ["json"] }
# Same 1.83 toolchain pin as warden-node: idna_adapter 1.2 (via ureq → url → idna) needs
# edition2024 / Rust 1.85.
idna_adapter = "=1.1.0"

[dev-dependencies]
# The end-to-end CLI test deals a federation in-process (trusted-dealer) and stands up mock
# nodes (tiny_http) that release partials, so encrypt→decrypt runs offline (no live chain).
warden-core = { path = "../core", features = ["trusted-dealer"] }
ark-std = "0.4"
tiny_http = "0.12"
