# warden-wasm — wasm-bindgen bindings over warden-core for the TS SDK (Veil).
# Standalone workspace (own [workspace]) so the parent `warden/` workspace's host builds/tests
# never try to compile this wasm-only, getrandom-js crate. Build with: wasm-pack build (or
# cargo build --target wasm32-unknown-unknown). Not audited; PoC.
[workspace]

[package]
name = "warden-wasm"
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Warden WASM bindings (Veil): condition identity, gate seal/open, threshold combine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core crypto. No trusted-dealer: the SDK never materializes the master secret.
warden-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1"
hex = "0.4"
ark-bls12-381 = "0.4"      # G1Projective (the combined IBE key d_id)
ark-serialize = "0.4"      # de/serialize Partial / MasterPublicKey / d_id
rand = "0.8"               # OsRng for sealing
# wasm RNG backend: getrandom's `js` feature routes to the JS crypto API on wasm32.
getrandom = { version = "0.2", features = ["js"] }
